# carry-trade-helper

./: .gitignore  AGENTS.md  BACKEND_FIXED.md  INIT_SUMMARY.md  LICENSE  MAGIC_LINK_FIXED.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  TIMEZONE_FIX_COMPLETE.md  docker-compose.yml
backend/: .env.example  .pylintrc  alembic.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_migration.py  002_add_refresh_tokens.py  003_add_jti.py  2026_04_07_1711_87a3c2dcce7e_fix_timezone_consistency.py  2026_04_07_1740_b6f2139d844e_change_timestamp_to_with_timezone.py  2026_04_08_1728_8ca8dd54668e_drop_provider_code_from_interest_rates.py
backend/app/: main.py
backend/app/agents/: carry_trade_agent.py
backend/app/api/: auth.py  chat.py  exchange_rates.py  interest_rates.py  subscriptions.py
backend/app/core/: config.py  database.py  security.py  tokens.py
backend/app/models/: __init__.py  chat.py  magic_link.py  rates.py  refresh_token.py  subscription.py  user.py
backend/app/schemas/: __init__.py  chat.py  frankfurter.py  rates.py  subscription.py  user.py
backend/app/services/: dbnomics_client.py  frankfurter_client.py  fred_client.py  resend_client.py  tavily_client.py
backend/app/tasks/: celery_app.py  fetch_rates.py  send_reports.py
backend/app/utils/: datetime_utils.py  helpers.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  railway.toml  vite.config.ts
frontend/src/: App.vue  main.ts
(+32 files in other folders)
